feat(wellsfargo): connector integration (#252)
Co-authored-by: Sayak Basak <sayak.basak@Sayak-Basak-H39VJL4FJ4.local>
Co-authored-by: Yashasvi Kapil <74726400+iemyashasvi@users.noreply.github.com>

--- a/config/production.toml
+++ b/config/production.toml
@@ -98,6 +98,7 @@ tsys.base_url = "https://gateway.transit-pass.com/"
 bankofamerica.base_url = "https://apitest.merchant-services.bankofamerica.com/"
 powertranz.base_url = "https://staging.ptranz.com/api"
 revolut.base_url = "https://oba-auth.revolut.com/"
+wellsfargo.base_url = "https://api.cybersource.com/"
 
 # Generic Events Configuration
 [events]
