--- a/config/development.toml
+++ b/config/development.toml
@@ -120,6 +120,7 @@ tsys.base_url = "https://stagegw.transnox.com/"
 bankofamerica.base_url = "https://apitest.merchant-services.bankofamerica.com/"
 powertranz.base_url = "https://staging.ptranz.com/api"
 revolut.base_url = "https://sandbox-merchant.revolut.com/"
+wellsfargo.base_url = "https://apitest.cybersource.com/"
 
 # Generic Events Configuration
 [events]
