--- a/config/sandbox.toml
+++ b/config/sandbox.toml
@@ -98,6 +98,7 @@ tsys.base_url = "https://stagegw.transnox.com/"
 bankofamerica.base_url = "https://apitest.merchant-services.bankofamerica.com/"
 powertranz.base_url = "https://staging.ptranz.com/api"
 revolut.base_url = "https://sandbox-oba-auth.revolut.com/"
+wellsfargo.base_url = "https://apitest.cybersource.com/"
 
 # Generic Events Configuration
 [events]
