--- a/config/sandbox.toml
+++ b/config/sandbox.toml
@@ -1,6 +1,8 @@
 [common]
 environment = "sandbox"
 
+test_mode = true
+
 [log.console]
 enabled = true
 level = "TRACE"
@@ -20,7 +22,7 @@ idle_pool_connection_timeout = 90               # Timeout for idle pool connecti
 bypass_proxy_urls = ["localhost", "local"]
 mitm_proxy_enabled = false
 
-[connectors]
+[connectors.sandbox]
 gigadat.base_url = "https://interac.express-connect.com/"
 paybox.base_url = "https://preprod-ppps.paybox.com/PPPS.php"
 loonio.base_url = "https://integration.loonio.ca/"
@@ -48,6 +50,7 @@ hipay.base_url = "https://stage-secure-gateway.hipay-tpp.com/rest/"
 hipay.secondary_base_url = "https://stage-secure2-vault.hipay-tpp.com/rest/v2/token"
 hipay.third_base_url = "https://stage-api-gateway.hipay.com/"
 globalpay.base_url = "https://apis.sandbox.globalpay.com/ucp"
+forte.base_url = "https://sandbox.forte.net/api/v3"
 adyen.base_url = "https://checkout-test.adyen.com/"
 adyen.dispute_base_url = "https://ca-test.adyen.com/"
 razorpay.base_url = "https://api.razorpay.com/"
@@ -61,10 +64,10 @@ phonepe.base_url = "https://api-preprod.phonepe.com/apis/hermes/"
 cashfree.base_url = "https://sandbox.cashfree.com/"
 fiuu.base_url = "https://sandbox.merchant.razer.com/"
 payload.base_url = "https://api.payload.com"
-forte.base_url = "https://sandbox.forte.net/api/v3"
 payu.base_url = "https://test.payu.in/"
 paytm.base_url = "https://securestage.paytmpayments.com/"
 cashtocode.base_url = "https://cluster05.api-test.cashtocode.com"
+calida.base_url = "https://dev.eorder.reloadhero.com/"
 novalnet.base_url = "https://payport.novalnet.de/v2"
 nexinets.base_url = "https://apitest.payengine.de/v1"
 noon.base_url = "https://api-test.noonpayments.com/"
@@ -72,7 +75,6 @@ mifinity.base_url = "https://demo.mifinity.com/"
 braintree.base_url = "https://payments.sandbox.braintree-api.com/graphql"
 volt.base_url = "https://gateway.sandbox.volt.io"
 volt.secondary_base_url = "https://api.sandbox.volt.io"
-calida.base_url = "https://dev.eorder.reloadhero.com/"
 cryptopay.base_url = "https://business-sandbox.cryptopay.me"
 helcim.base_url = "https://api.helcim.com/"
 dlocal.base_url = "https://sandbox.dlocal.com/"
@@ -84,19 +86,97 @@ trustpay.base_url_bank_redirects = "https://aapi.trustpay.eu/"
 stripe.base_url = "https://api.stripe.com/"
 cybersource.base_url = "https://apitest.cybersource.com/"
 worldpay.base_url = "https://try.access.worldpay.com/"
+worldpayxml.base_url = "https://secure-test.worldpay.com/jsp/merchant/xml/paymentService.jsp"
 worldpayvantiv.base_url = "https://transact.vantivprelive.com/vap/communicator/online"
 worldpayvantiv.secondary_base_url = "https://onlinessr.vantivprelive.com"
+bamboraapac.base_url = "https://demo.ippayments.com.au/interface/api"
 paypal.base_url = "https://api-m.sandbox.paypal.com/"
 paysafe.base_url = "https://api.test.paysafe.com/paymenthub/"
 billwerk.base_url = "https://api.reepay.com/"
 billwerk.secondary_base_url = "https://card.reepay.com/"
 nuvei.base_url = "https://ppp-test.nuvei.com/ppp/api/v1"
-bamboraapac.base_url = "https://demo.ippayments.com.au/interface/api"
-worldpayxml.base_url = "https://secure-test.worldpay.com/jsp/merchant/xml/paymentService.jsp"
 tsys.base_url = "https://stagegw.transnox.com/"
 bankofamerica.base_url = "https://apitest.merchant-services.bankofamerica.com/"
 powertranz.base_url = "https://staging.ptranz.com/api"
-revolut.base_url = "https://sandbox-oba-auth.revolut.com/"
+revolut.base_url = "https://sandbox-merchant.revolut.com/"
+
+[connectors.production]
+gigadat.base_url = "https://interac.express-connect.com/"
+paybox.base_url = "https://ppps.paybox.com/PPPS.php"
+loonio.base_url = "https://loonio.ca/"
+payme.base_url = "https://live.payme.io/api/"
+barclaycard.base_url = "https://api.smartpayfuse.barclaycard"
+airwallex.base_url = "https://api.airwallex.com/api/v1"
+bambora.base_url = "https://api.na.bambora.com/v1"
+shift4.base_url = "https://api.shift4.com"
+bluesnap.base_url = "https://ws.bluesnap.com"
+bluesnap.secondary_base_url = "https://pay.bluesnap.com"
+multisafepay.base_url = "https://testapi.multisafepay.com/v1/json"
+iatapay.base_url = "https://iata-pay.iata.org/api/v1"
+jpmorgan.base_url = "https://api-ms.payments.jpmorgan.com/api/v2"
+jpmorgan.secondary_base_url = "https://id.payments.jpmorgan.com"
+nmi.base_url = "https://secure.nmi.com"
+nexixpay.base_url = "https://xpay.nexigroup.com/api/phoenix-0.0/psp/api/v1"
+authipay.base_url = "https://prod.emea.api.fiservapps.com/ipp/payments-gateway/v2/payments"
+stax.base_url = "https://apiprod.fattlabs.com"
+trustpayments.base_url = "https://webservices.securetrading.net"
+fiservemea.base_url = "https://prod.emea.api.fiservapps.com/ipp/payments-gateway/v2/payments"
+datatrans.base_url = "https://api.datatrans.com"
+silverflow.base_url = "https://api.silverflow.co/v1"
+celero.base_url = "https://app.gotnpgateway.com"
+hipay.base_url = "https://secure-gateway.hipay-tpp.com/rest/"
+hipay.secondary_base_url = "https://secure2-vault.hipay-tpp.com/rest/v2/token"
+hipay.third_base_url = "https://api-gateway.hipay.com/"
+globalpay.base_url = "https://apis.globalpay.com/ucp"
+adyen.base_url = "https://{{merchant_endpoint_prefix}}-checkout-live.adyenpayments.com/checkout/"
+adyen.dispute_base_url = "https://{{merchant_endpoint_prefix}}-ca-live.adyen.com/"
+razorpay.base_url = "https://api.razorpay.com/"
+razorpayv2.base_url = "https://api.razorpay.com/"
+fiserv.base_url = "https://cert.api.fiservapps.com/"
+elavon.base_url = "https://api.convergepay.com/VirtualMerchant/"
+xendit.base_url = "https://api.xendit.co"
+checkout.base_url = "https://api.sandbox.checkout.com/"
+authorizedotnet.base_url = "https://api.authorize.net/xml/v1/request.api"
+phonepe.base_url = "https://api.phonepe.com/apis/hermes/"
+cashfree.base_url = "https://sandbox.cashfree.com/"
+fiuu.base_url = "https://pay.merchant.razer.com/"
+payload.base_url = "https://api.payload.com"
+forte.base_url = "https://api.forte.net/v3"
+payu.base_url = "https://secure.payu.com/api/"
+paytm.base_url = "https://secure.paytmpayments.com/"
+cashtocode.base_url = "https://cluster14.api.cashtocode.com"
+novalnet.base_url = "https://payport.novalnet.de/v2"
+nexinets.base_url = "https://api.payengine.de/v1"
+noon.base_url = "https://api.noonpayments.com/"
+mifinity.base_url = "https://secure.mifinity.com/"
+braintree.base_url = "https://payments.braintree-api.com/graphql"
+volt.base_url = "https://gateway.volt.io"
+volt.secondary_base_url = "https://api.volt.io/"
+calida.base_url = "https://app.eorder.reloadhero.com/"
+cryptopay.base_url = "https://business.cryptopay.me/"
+helcim.base_url = "https://api.helcim.com/"
+dlocal.base_url = "https://api.dlocal.com/"
+placetopay.base_url = "https://checkout.placetopay.com/rest/gateway"
+rapyd.base_url = "https://api.rapyd.net"
+aci.base_url = "https://eu-prod.oppwa.com/"
+trustpay.base_url = "https://tpgw.trustpay.eu/"
+trustpay.base_url_bank_redirects = "https://aapi.trustpay.eu/"
+stripe.base_url = "https://api.stripe.com/"
+cybersource.base_url = "https://api.cybersource.com/"
+worldpay.base_url = "https://access.worldpay.com/"
+worldpayvantiv.base_url = "https://transact.vantivcnp.com/vap/communicator/online"
+worldpayvantiv.secondary_base_url = "https://onlinessr.vantivcnp.com"
+bamboraapac.base_url = "https://www.bambora.co.nz/interface/api"
+paypal.base_url = "https://api-m.paypal.com/"
+paysafe.base_url = "https://api.paysafe.com/paymenthub/"
+billwerk.base_url = "https://api.reepay.com/"
+billwerk.secondary_base_url = "https://card.reepay.com/"
+nuvei.base_url = "https://secure.safecharge.com/ppp/api/v1"
+worldpayxml.base_url = "https://secure.worldpay.com/jsp/merchant/xml/paymentService.jsp"
+tsys.base_url = "https://gateway.transit-pass.com/"
+bankofamerica.base_url = "https://apitest.merchant-services.bankofamerica.com/"
+powertranz.base_url = "https://staging.ptranz.com/api"
+revolut.base_url = "https://oba-auth.revolut.com/"
 
 # Generic Events Configuration
 [events]
