--- a/config/production.toml
+++ b/config/production.toml
@@ -61,6 +61,8 @@ authorizedotnet.base_url = "https://api.authorize.net/xml/v1/request.api"
 phonepe.base_url = "https://api.phonepe.com/apis/hermes/"
 cashfree.base_url = "https://sandbox.cashfree.com/"
 fiuu.base_url = "https://pay.merchant.razer.com/"
+fiuu.secondary_base_url = "https://api.merchant.razer.com/"
+fiuu.third_base_url="https://api.merchant.razer.com/"
 payload.base_url = "https://api.payload.com"
 forte.base_url = "https://api.forte.net/v3"
 payu.base_url = "https://secure.payu.com/api/"
