--- a/config/sandbox.toml
+++ b/config/sandbox.toml
@@ -61,6 +61,8 @@ authorizedotnet.base_url = "https://apitest.authorize.net/xml/v1/request.api"
 phonepe.base_url = "https://api-preprod.phonepe.com/apis/hermes/"
 cashfree.base_url = "https://sandbox.cashfree.com/"
 fiuu.base_url = "https://sandbox.merchant.razer.com/"
+fiuu.secondary_base_url = "https://sandbox.merchant.razer.com/"
+fiuu.third_base_url = "https://api.merchant.razer.com/"
 payload.base_url = "https://api.payload.com"
 forte.base_url = "https://sandbox.forte.net/api/v3"
 payu.base_url = "https://test.payu.in/"
