--- a/config/development.toml
+++ b/config/development.toml
@@ -103,6 +103,7 @@ helcim.base_url = "https://api.helcim.com/"
 dlocal.base_url = "https://sandbox.dlocal.com/"
 placetopay.base_url = "https://test.placetopay.com/rest/gateway"
 rapyd.base_url = "https://sandboxapi.rapyd.net"
+redsys.base_url = "https://sis-t.redsys.es:25443"
 aci.base_url = "https://eu-test.oppwa.com/"
 trustpay.base_url = "https://test-tpgw.trustpay.eu/"
 trustpay.base_url_bank_redirects = "https://aapi.trustpay.eu/"
