--- a/config/development.toml
+++ b/config/development.toml
@@ -49,6 +49,8 @@ loonio.base_url = "https://integration.loonio.ca/"
 getnet.base_url = "https://api-sbx.globalgetnet.com"
 payme.base_url = "https://sandbox.payme.io/api/"
 barclaycard.base_url = "https://api.smartpayfuse-test.barclaycard"
+mollie.base_url = "https://api.mollie.com/v2"
+mollie.secondary_base_url = "https://api.cc.mollie.com/v1/"
 airwallex.base_url = "https://api-demo.airwallex.com/api/v1"
 bambora.base_url = "https://api.na.bambora.com/v1"
 shift4.base_url = "https://api.shift4.com"
