--- a/config/production.toml
+++ b/config/production.toml
@@ -21,6 +21,8 @@ bypass_proxy_urls = ["localhost", "local"]
 mitm_proxy_enabled = false
 
 [connectors]
+mollie.base_url = "https://api.mollie.com/v2"
+mollie.secondary_base_url = "https://api.cc.mollie.com/v1/"
 gigadat.base_url = "https://interac.express-connect.com/"
 paybox.base_url = "https://ppps.paybox.com/PPPS.php"
 loonio.base_url = "https://loonio.ca/"
